# frontendateo20

./: .env  package-lock.json  package.json  pyproject.toml  vite.config.js
src/: App.vue
src/api/: compras.js  livros.js
src/components/: MenuView.vue
src/router/: index.js
src/stores/: categoria.js  compra.js  livro.js
src/views/: CategoriaView.vue  CompraView.vue  HomeView.vue  LivroView.vue  LoginView.vue  UsuarioView.vue
